tests/shouldFail/j309a.c
int foo();

int main(void){
	foo(5, 7);
}

int foo(int a, int b, ...){
	return 0;
}
